--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -3,7 +3,7 @@ name: Run Python script every 15 min
 on:
   schedule:
     - cron: "*/15 * * * *"   # toutes les 15 minutes (UTC)
-  workflow_dispatch:         # bouton "Run workflow" manuel
+  workflow_dispatch:
 
 concurrency:
   group: python-cron
@@ -13,7 +13,15 @@ jobs:
   run:
     runs-on: ubuntu-latest
     permissions:
-      contents: write   # nécessaire si on commit/push des fichiers générés
+      contents: write
+
+    env:
+      REPO: ${{ github.repository }}
+      RUN_ID: ${{ github.run_id }}
+      RUN_NUMBER: ${{ github.run_number }}
+      SHA: ${{ github.sha }}
+      ACTOR: ${{ github.actor }}
+      WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
     steps:
       - name: Checkout repo
@@ -29,29 +37,19 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # --- crée tous les dossiers dont ton script a besoin ---
       - name: Ensure required folders exist
         run: |
           mkdir -p data/stats
           mkdir -p data/usercache
+          mkdir -p data/playerdata
           mkdir -p data/cobblemonplayerdata
           mkdir -p data/vanilla
           mkdir -p images
           mkdir -p staticdata
 
-      # (facultatif mais utile au débogage)
-      - name: Debug – show repo tree
-        run: |
-          pwd
-          ls -la
-          echo "--------- tracked files ---------"
-          git ls-files
-
-      # Exécute ton script (à la racine du repo)
       - name: Run script
         run: python main.py
 
-      # (Optionnel) Commit & push des fichiers modifiés/générés (CSV, images, txt…)
       - name: Commit & push changes (if any)
         run: |
           git config user.name  "github-actions[bot]"
@@ -63,3 +61,23 @@ jobs:
           else
             echo "No changes to commit."
           fi
+
+      # ------------ Notifications Discord ------------
+      # Succès
+      - name: Notify Discord (success)
+        if: success()
+        run: |
+          MSG="✅ **${REPO}** – run #${RUN_NUMBER} réussi\n\
+          • Actor: ${ACTOR}\n\
+          • Commit: ${SHA}\n\
+          • Logs: https://github.com/${REPO}/actions/runs/${RUN_ID}"
+          curl -s -X POST -H "Content-Type: application/json" \
+            -d "{\"content\": ${MSG@Q}}" \
+            "$WEBHOOK"
+
+      # Échec (message + extrait des 60 dernières lignes de log)
+      - name: Notify Discord (failure)
+        if: failure()
+        run: |
+          echo "Récupération des logs..."
+          gh a
