--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -3,7 +3,7 @@ name: Run Python script every 15 min
 on:
   schedule:
     - cron: "*/15 * * * *"   # toutes les 15 minutes (UTC)
-  workflow_dispatch:
+  workflow_dispatch:         # bouton "Run workflow" manuel
 
 concurrency:
   group: python-cron
@@ -37,6 +37,7 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+      # Crée tous les dossiers attendus par ton script
       - name: Ensure required folders exist
         run: |
           mkdir -p data/stats
@@ -47,9 +48,19 @@ jobs:
           mkdir -p images
           mkdir -p staticdata
 
+      # (facultatif) petit debug d’arborescence
+      - name: Debug – show repo tree
+        run: |
+          pwd
+          ls -la
+          echo "--------- tracked files ---------"
+          git ls-files
+
+      # Lance ton script (s'il n'est pas à la racine, remplace main.py par son chemin)
       - name: Run script
         run: python main.py
 
+      # Commit/push des fichiers générés si le script a modifié quelque chose
       - name: Commit & push changes (if any)
         run: |
           git config user.name  "github-actions[bot]"
@@ -62,8 +73,7 @@ jobs:
             echo "No changes to commit."
           fi
 
-      # ------------ Notifications Discord ------------
-      # Succès
+      # ------------ Notifications Discord (JSON corrigé) ------------
       - name: Notify Discord (success)
         if: success()
         run: |
@@ -71,13 +81,15 @@ jobs:
           • Actor: ${ACTOR}\n\
           • Commit: ${SHA}\n\
           • Logs: https://github.com/${REPO}/actions/runs/${RUN_ID}"
-          curl -s -X POST -H "Content-Type: application/json" \
-            -d "{\"content\": ${MSG@Q}}" \
-            "$WEBHOOK"
+          PAYLOAD=$(echo "{\"content\": \"$MSG\"}")
+          curl -s -H "Content-Type: application/json" -X POST -d "$PAYLOAD" "$WEBHOOK"
 
-      # Échec (message + extrait des 60 dernières lignes de log)
       - name: Notify Discord (failure)
         if: failure()
         run: |
-          echo "Récupération des logs..."
-          gh a
+          MSG="❌ **${REPO}** – run #${RUN_NUMBER} a échoué\n\
+          • Actor: ${ACTOR}\n\
+          • Commit: ${SHA}\n\
+          • Logs: https://github.com/${REPO}/actions/runs/${RUN_ID}"
+          PAYLOAD=$(echo "{\"content\": \"$MSG\"}")
+          curl -s -H "Content-Type: application/json" -X POST -d "$PAYLOAD" "$WEBHOOK"
