--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -16,11 +16,6 @@ jobs:
       contents: write
 
     env:
-      REPO: ${{ github.repository }}
-      RUN_ID: ${{ github.run_id }}
-      RUN_NUMBER: ${{ github.run_number }}
-      SHA: ${{ github.sha }}
-      ACTOR: ${{ github.actor }}
       WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
     steps:
@@ -48,7 +43,9 @@ jobs:
           mkdir -p staticdata
 
       - name: Run script
-        run: python main.py
+        run: |
+          set -o pipefail
+          python main.py | tee script_output.log
 
       - name: Commit & push changes (if any)
         run: |
@@ -62,37 +59,71 @@ jobs:
             echo "No changes to commit."
           fi
 
-      # --- Envoie l'URL partageable dans Discord ---
-      - name: Send shareable URL to Discord
+      # ---- Construire une URL STABLE et l'envoyer sur Discord (ou uploader le fichier en fallback)
+      - name: Send stable link to Discord (or upload file)
         if: success()
-        env:
-          PUBLIC_BASE_URL: ${{ vars.PUBLIC_BASE_URL }}   # optionnel: Settings > Variables
         run: |
+          set -e
+
+          # 1) Récupère l'URL écrite par le script ou trouvée dans les logs
+          URL=""
           if [ -f latest_leaderboard_url.txt ]; then
-            RAW=$(tr -d '\r\n' < latest_leaderboard_url.txt)
-          else
-            RAW=""
+            URL=$(tr -d '\r\n' < latest_leaderboard_url.txt)
+          fi
+          if [ -z "$URL" ] && [ -f script_output.log ]; then
+            URL=$(grep -Eo 'https?://[^ )>"'\''\r\n]+' script_output.log | tail -n 1 || true)
           fi
 
-          if echo "$RAW" | grep -Eiq '^https?://'; then
-            URL="$RAW"
-          else
-            REL="${RAW#./}"; REL="${REL#/}"
-            if [ -n "$PUBLIC_BASE_URL" ]; then
-              BASE="${PUBLIC_BASE_URL%/}"
-              URL="$BASE/$REL"
-            else
-              OWNER="${GITHUB_REPOSITORY_OWNER}"
-              REPO_NAME="$(echo "${GITHUB_REPOSITORY}" | awk -F/ '{print $2}')"
-              URL="https://${OWNER}.github.io/${REPO_NAME}/${REL}"
+          # 2) Nettoie l'URL: enlève tout après ? (token éphémère)
+          CLEAN_URL="$URL"
+          if [ -n "$CLEAN_URL" ]; then
+            CLEAN_URL="${CLEAN_URL%%\?*}"
+          fi
+
+          # 3) Essaie de convertir en URL jsDelivr (stable) si c'est un raw GitHub
+          #    raw.githubusercontent.com/USER/REPO/BRANCH/PATH -> cdn.jsdelivr.net/gh/USER/REPO@BRANCH/PATH
+          CDN_URL=""
+          if echo "$CLEAN_URL" | grep -q '^https://raw.githubusercontent.com/'; then
+            PARTS="$(echo "$CLEAN_URL" | sed -E 's#https://raw\.githubusercontent\.com/([^/]+)/([^/]+)/([^/]+)/(.*)#\1 \2 \3 \4#')"
+            USER="$(echo "$PARTS" | awk '{print $1}')"
+            REPO="$(echo "$PARTS" | awk '{print $2}')"
+            BRANCH="$(echo "$PARTS" | awk '{print $3}')"
+            FILEPATH="$(echo "$PARTS" | cut -d' ' -f4-)"
+            CDN_URL="https://cdn.jsdelivr.net/gh/${USER}/${REPO}@${BRANCH}/${FILEPATH}"
+          fi
+
+          # 4) Choisit la meilleure URL qui répond (200)
+          STABLE_URL=""
+          if [ -n "$CDN_URL" ]; then
+            if curl -sI "$CDN_URL" | head -n 1 | grep -qE ' 200| 302'; then
+              STABLE_URL="$CDN_URL"
+            fi
+          fi
+          if [ -z "$STABLE_URL" ] && [ -n "$CLEAN_URL" ]; then
+            if curl -sI "$CLEAN_URL" | head -n 1 | grep -qE ' 200| 302'; then
+              STABLE_URL="$CLEAN_URL"
             fi
           fi
 
-          if [ -z "$URL" ]; then
-            MSG="⚠️ Aucune URL à envoyer (latest_leaderboard_url.txt manquant ou vide)."
-          else
-            MSG="$URL"
+          # 5) Si aucune URL publique ne marche (repo privé), on uploade directement le fichier image sur Discord
+          if [ -z "$STABLE_URL" ]; then
+            echo "No public URL works; trying to upload file directly..."
+            # essaie de deviner le fichier généré le plus récent dans images/
+            CANDIDATE="$(ls -t images/*.png 2>/dev/null | head -n 1 || true)"
+            if [ -n "$CANDIDATE" ] && [ -f "$CANDIDATE" ]; then
+              curl -s -X POST \
+                -F "payload_json={\"content\":\"🏆 Nouveau leaderboard (upload direct)\"}" \
+                -F "file=@${CANDIDATE};type=image/png" \
+                "$WEBHOOK"
+              exit 0
+            else
+              MSG="⚠️ Impossible de produire un lien stable et aucun fichier image trouvé pour upload."
+              PAYLOAD=$(printf '{"content":"%s"}' "$MSG")
+              curl -s -H "Content-Type: application/json" -X POST -d "$PAYLOAD" "$WEBHOOK"
+              exit 0
+            fi
           fi
 
-          PAYLOAD=$(printf '{"content":"%s"}' "$MSG")
+          # 6) Envoi de l'URL stable choisie
+          PAYLOAD=$(printf '{"content":"%s"}' "$STABLE_URL")
           curl -s -H "Content-Type: application/json" -X POST -d "$PAYLOAD" "$WEBHOOK"
