--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,8 +2,8 @@ name: Run Python script every 15 min (robust)
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # tick toutes les 5 min (UTC)
-  workflow_dispatch:         # pour tester à la main
+    - cron: "*/5 * * * *"
+  workflow_dispatch:
 
 concurrency:
   group: python-cron
@@ -21,34 +21,30 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Porte d'entrée : on ne lance le lourd que si l'heure UTC est sur 00/15/30/45
       - name: Gate 15-minute marks only
         id: gate
         run: |
           MIN=$(date -u +%M)
-          echo "UTC minute: $MIN"
           if [ $((10#$MIN % 15)) -eq 0 ]; then
             echo "run=true" >> "$GITHUB_OUTPUT"
-            echo "Proceeding (quarter-hour mark)."
           else
             echo "run=false" >> "$GITHUB_OUTPUT"
-            echo "Not a quarter-hour mark, skipping heavy steps."
           fi
 
       - name: Set up Python
-        if: steps.gate.outputs.run == 'true'
+        if: ${{ steps.gate.outputs.run == 'true' }}
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install dependencies
-        if: steps.gate.outputs.run == 'true'
+        if: ${{ steps.gate.outputs.run == 'true' }}
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Ensure required folders exist
-        if: steps.gate.outputs.run == 'true'
+        if: ${{ steps.gate.outputs.run == 'true' }}
         run: |
           mkdir -p data/stats
           mkdir -p data/usercache
@@ -59,13 +55,13 @@ jobs:
           mkdir -p staticdata
 
       - name: Run script
-        if: steps.gate.outputs.run == 'true'
+        if: ${{ steps.gate.outputs.run == 'true' }}
         run: |
           set -o pipefail
           python main.py | tee script_output.log
 
       - name: Commit & push changes (if any)
-        if: steps.gate.outputs.run == 'true'
+        if: ${{ steps.gate.outputs.run == 'true' }}
         run: |
           set -e
           git config user.name  "github-actions[bot]"
@@ -81,15 +77,10 @@ jobs:
           fi
 
       - name: Send stable link to Discord
-        if: steps.gate.outputs.run == 'true' && github.event_name == 'schedule' && success()
+        if: ${{ steps.gate.outputs.run == 'true' && github.event_name == 'schedule' && success() }}
         run: |
-          set -e
-          REPO_PATH="${GITHUB_REPOSITORY}"   # ex: NeliKkTv/cobbledex-leaderboardV4
+          REPO_PATH="${GITHUB_REPOSITORY}"
           STABLE_URL="https://cdn.jsdelivr.net/gh/${REPO_PATH}@main/images/top3.png"
           MSG="🏆 Leaderboard mis à jour :\n${STABLE_URL}"
           PAYLOAD=$(printf '{"content":"%s"}' "$MSG")
           curl -s -H "Content-Type: application/json" -X POST -d "$PAYLOAD" "$WEBHOOK"
-
-      - name: Skipped (not a quarter-hour)
-        if: steps.gate.outputs.run != 'true'
-        run: echo "Skip run: not on a 15-minute boundary (UTC)."
