--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,92 +1,12 @@
-name: Run Python script every 15 min (robust)
-
+name: cron-smoke-test
 on:
   schedule:
     - cron: "*/5 * * * *"
   workflow_dispatch:
 
-concurrency:
-  group: python-cron
-  cancel-in-progress: false
-
 jobs:
-  run:
+  test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    env:
-      WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Gate quarter-hour window
-        id: gate
-        run: |
-          TS=$(date -u +%s)
-          REM=$(( (TS/60) % 15 ))
-          echo "UTC now: $(date -u) | remainder=$REM"
-          if [ $REM -le 2 ]; then
-            echo "run=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "run=false" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: Set up Python
-        if: ${{ steps.gate.outputs.run == 'true' }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        if: ${{ steps.gate.outputs.run == 'true' }}
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Ensure required folders exist
-        if: ${{ steps.gate.outputs.run == 'true' }}
-        run: |
-          mkdir -p data/stats
-          mkdir -p data/usercache
-          mkdir -p data/playerdata
-          mkdir -p data/cobblemonplayerdata
-          mkdir -p data/vanilla
-          mkdir -p images
-          mkdir -p staticdata
-
-      - name: Run script
-        if: ${{ steps.gate.outputs.run == 'true' }}
-        run: |
-          set -o pipefail
-          python main.py | tee script_output.log
-
-      - name: Commit & push changes (if any)
-        if: ${{ steps.gate.outputs.run == 'true' }}
-        run: |
-          set -e
-          git config user.name  "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git fetch origin main
-          git pull --rebase --autostash origin main || true
-          git add -A
-          if ! git diff --cached --quiet; then
-            git commit -m "Auto-update from cron: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-            git push || { git pull --rebase --autostash origin main && git push; }
-          else
-            echo "No changes to commit."
-          fi
-
-      - name: Send stable link to Discord
-        if: ${{ steps.gate.outputs.run == 'true' && github.event_name == 'schedule' && success() }}
-        run: |
-          REPO_PATH="${GITHUB_REPOSITORY}"
-          STABLE_URL="https://cdn.jsdelivr.net/gh/${REPO_PATH}@main/images/top3.png"
-          MSG="Leaderboard mis à jour : ${STABLE_URL}"
-          PAYLOAD=$(printf '{"content":"%s"}' "$MSG")
-          curl -s -H "Content-Type: application/json" -X POST -d "$PAYLOAD" "$WEBHOOK"
-
-      - name: Skipped (outside window)
-        if: ${{ steps.gate.outputs.run != 'true' }}
-        run: echo "Skipped: not within 3-min window after 00/15/30/45 UTC."
+      - name: Echo
+        run: echo "ok"
